--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "compile:sass": "sass --watch scss:css"
   },
   "author": "Juan Pablo Sauzet",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chuampis/Clase15-GitHub.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Chuampis/Clase15-GitHub/issues"
+  },
+  "homepage": "https://github.com/Chuampis/Clase15-GitHub#readme"
 }
